// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with default values - primary color, lg, initials, status online but have initials rt instead of the default 1`] = `
<div
  className="flex items-center justify-center relative rounded-full font-ibm text-white uppercase w-11 h-11 text-xl bg-primary-50"
>
  <span>
    Rt
  </span>
  <div
    className="absolute bottom-0 right-0 rounded-full  outline-2 outline outline-white w-2.5 h-2.5 bg-green-50"
  />
</div>
`;

exports[`should render with initals RR, default color, small size, and status offline/gray/false 1`] = `
<div
  className="flex items-center justify-center relative rounded-full font-ibm text-white uppercase w-9 h-9 text-base bg-primary-50"
>
  <span>
    RR
  </span>
  <div
    className="absolute bottom-0 right-0 rounded-full  outline-2 outline outline-white w-2 h-2 bg-gray-30"
  />
</div>
`;

exports[`should render with props color="blue" size="sm" type="icon" Icon={DocumentIcon} statusIndicator={true} status={true} 1`] = `
<div
  className="flex items-center justify-center relative rounded-full font-ibm text-white uppercase w-9 h-9 text-base bg-blue-50"
>
  <svg
    aria-hidden="true"
    className="w-full p-2"
    fill="none"
    stroke="currentColor"
    strokeWidth={2}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </svg>
  <div
    className="absolute bottom-0 right-0 rounded-full  outline-2 outline outline-white w-2 h-2 bg-green-50"
  />
</div>
`;

exports[`should render with props color="purple" size="lg" type="initials" statusIndicator={true} status={true} initials="gJ" 1`] = `
<div
  className="flex items-center justify-center relative rounded-full font-ibm text-white uppercase w-11 h-11 text-xl bg-purple-50"
>
  <span>
    gJ
  </span>
  <div
    className="absolute bottom-0 right-0 rounded-full  outline-2 outline outline-white w-2.5 h-2.5 bg-green-50"
  />
</div>
`;

exports[`should render with props color=red and Document icon 1`] = `
<div
  className="flex items-center justify-center relative rounded-full font-ibm text-white uppercase w-11 h-11 text-xl bg-red-50"
>
  <svg
    aria-hidden="true"
    className="w-full p-2"
    fill="none"
    stroke="currentColor"
    strokeWidth={2}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </svg>
  <div
    className="absolute bottom-0 right-0 rounded-full  outline-2 outline outline-white w-2.5 h-2.5 bg-green-50"
  />
</div>
`;

exports[`should render with props type="icon" Icon={DocumentIcon} no status 1`] = `
<div
  className="flex items-center justify-center relative rounded-full font-ibm text-white uppercase w-11 h-11 text-xl bg-primary-50"
>
  <svg
    aria-hidden="true"
    className="w-full p-2"
    fill="none"
    stroke="currentColor"
    strokeWidth={2}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </svg>
  <div
    className="absolute bottom-0 right-0 rounded-full  outline-2 outline outline-white w-2.5 h-2.5 hidden bg-green-50"
  />
</div>
`;

exports[`should render with props type="icon" Icon={DocumentIcon} statusIndicator={true} status={false} 1`] = `
<div
  className="flex items-center justify-center relative rounded-full font-ibm text-white uppercase w-11 h-11 text-xl bg-primary-50"
>
  <svg
    aria-hidden="true"
    className="w-full p-2"
    fill="none"
    stroke="currentColor"
    strokeWidth={2}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </svg>
  <div
    className="absolute bottom-0 right-0 rounded-full  outline-2 outline outline-white w-2.5 h-2.5 bg-gray-30"
  />
</div>
`;

exports[`should render with props type="initials" statusIndicator={false} initials="AH" 1`] = `
<div
  className="flex items-center justify-center relative rounded-full font-ibm text-white uppercase w-11 h-11 text-xl bg-primary-50"
>
  <span>
    AH
  </span>
  <div
    className="absolute bottom-0 right-0 rounded-full  outline-2 outline outline-white w-2.5 h-2.5 hidden bg-green-50"
  />
</div>
`;

exports[`should render with red color, document icon and no status shown 1`] = `
<div
  className="flex items-center justify-center relative rounded-full font-ibm text-white uppercase w-11 h-11 text-xl bg-red-50"
>
  <svg
    aria-hidden="true"
    className="w-full p-2"
    fill="none"
    stroke="currentColor"
    strokeWidth={2}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </svg>
  <div
    className="absolute bottom-0 right-0 rounded-full  outline-2 outline outline-white w-2.5 h-2.5 hidden bg-gray-30"
  />
</div>
`;

exports[`should render with small size, initials AF, status shown but offline and purple color 1`] = `
<div
  className="flex items-center justify-center relative rounded-full font-ibm text-white uppercase w-9 h-9 text-base bg-purple-50"
>
  <span>
    af
  </span>
  <div
    className="absolute bottom-0 right-0 rounded-full  outline-2 outline outline-white w-2 h-2 bg-gray-30"
  />
</div>
`;

exports[`should render with yellow color, document icon and online status displayed 1`] = `
<div
  className="flex items-center justify-center relative rounded-full font-ibm text-white uppercase w-11 h-11 text-xl bg-yellow-60"
>
  <svg
    aria-hidden="true"
    className="w-full p-2"
    fill="none"
    stroke="currentColor"
    strokeWidth={2}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </svg>
  <div
    className="absolute bottom-0 right-0 rounded-full  outline-2 outline outline-white w-2.5 h-2.5 bg-green-50"
  />
</div>
`;
